Add padding left

--- a/css/overlay.scss
+++ b/css/overlay.scss
@@ -3,7 +3,11 @@
     padding-top: 5px;
     padding-bottom: 5px;
   }
-
+  
+  ol {
+    padding-left: 12px;
+  }
+  
   ul {
     list-style-type: disc;
     padding-left: 25px;
