--- a/css/overlay.scss
+++ b/css/overlay.scss
@@ -1,27 +1,49 @@
 #tos-overlay {
-  p {
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-  
-  ol {
-    padding-left: 12px;
-  }
-  
-  ul {
-    list-style-type: disc;
-    padding-left: 25px;
-  }
 
-  a {
-    text-decoration: underline;
-  }
+  padding: 10px;
 
   h3 {
+    float: left;
     font-weight: 800;
   }
 
-  #tos-country-chooser {
-    max-width: 100%;
+  button {
+    margin: 0 auto;
+    display : block;
+  }
+
+  select {
+    float: right;
+  }
+
+  .clear-both {
+    clear: both;
+  }
+
+  /**
+   * Basic Markdown support
+   */
+  div.text-content {
+    h3 {
+      font-weight: 800;
+    }
+
+    p {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+
+    ol {
+      padding-left: 12px;
+    }
+
+    ul {
+      list-style-type: disc;
+      padding-left: 25px;
+    }
+
+    a {
+      text-decoration: underline;
+    }
   }
 }
