More css fixing
Signed-off-by: Joas Schilling <coding@schilljs.com>

--- a/css/overlay.scss
+++ b/css/overlay.scss
@@ -1,5 +1,12 @@
-#terms_of_service_confirm .v--modal-overlay {
-  z-index: 99999;
+#terms_of_service_confirm {
+  .v--modal-overlay {
+    z-index: 99999;
+  }
+
+  .v--modal-overlay .v--modal-box {
+    max-height: 300px;
+    overflow: auto;
+  }
 }
 
 #tos-overlay {
